# frsky_sport_tool

./: .gitignore  .gitmodules  AboutDlg.cpp  AboutDlg.h  AboutDlg.ui  CLIProgDlg.cpp  CLIProgDlg.h  CMakeLists.txt  ConfigDlg.cpp  ConfigDlg.h  ConfigDlg.ui  LogFile.cpp  LogFile.h  LuaEngine.cpp  LuaEngine.h  LuaEvents.cpp  LuaEvents.h  LuaGeneral.cpp  LuaGeneral.h  LuaLCD.cpp  LuaLCD.h  LuaLCD.ui  LuaScriptDlg.cpp  LuaScriptDlg.h  LuaScriptDlg.ui  Lua_lrotable.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PersistentSettings.cpp  PersistentSettings.h  ProgDlg.cpp  ProgDlg.h  README.md  SaveLoadFileDialog.cpp  SaveLoadFileDialog.h  UICallback.h  bit32.lua  defs.h  dewhisna-digital-copyright-instructions.yml  (+23 more)
appimage/: docker_build_x86_64_appimage.sh  packer_docker_build_x86_64_appimage.json
frsky_device_emu/: CMakeLists.txt  frsky_device_emu.cpp  frsky_device_emu.desktop  frsky_device_emu.png.txt
frsky_firmware_flash/: CMakeLists.txt  frsky_firmware_flash.cpp  frsky_firmware_flash.desktop  frsky_firmware_flash.png.txt
lua/: LuaEngine.cpp  LuaEvents.cpp  LuaEvents.h  LuaLCD.cpp  LuaLCD.ui  LuaScriptDlg.ui  Lua_lrotable.h  lua.cmake
scripts/: README.md  SxR_R9S_Calibrate_sport.lua  SxR_R9S_Configure_sport.lua
